# VProxySuite

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
docker/: api.Dockerfile  bot.Dockerfile  docker-compose.dev.yml  reports.Dockerfile  worker.Dockerfile
services/api/: pyproject.toml
services/api/src/: __init__.py  main.py
services/api/src/config/: __init__.py  settings.py
services/api/src/db/: __init__.py  base.py  models.py
services/api/src/routes/: __init__.py  health.py
services/api/src/schemas/: __init__.py  configs.py  reports.py  tasks.py
services/bot/: pyproject.toml
services/bot/src/: app.py
services/bot/src/bot/: keyboards.py  middlewares.py
services/bot/src/bot/routers/: start.py
services/bot/src/clients/: api_client.py
services/bot/src/config/: settings.py
services/bot/src/utils/: logging.py
services/worker/: pyproject.toml
services/worker/src/: __init__.py  celery_app.py
services/worker/src/config/: __init__.py  settings.py
services/worker/src/core/: __init__.py  parsers.py  runner.py
services/worker/src/plugins/: __init__.py  base.py
services/worker/src/testsuite/: __init__.py  common.py
