[tool.poetry]
name = "vproxysuite"
version = "0.1.0"
description = "VProxySuite - Advanced VLESS/VMESS Testing Bot Suite"
authors = ["Navid Arianpour <navid.arianpour1987@proton.me>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
black = "^24.3.0"
isort = "^5.12.0"
mypy = "^1.5.0"
flake8 = "^6.1.0"
pre-commit = "^3.4.0"

[build-system]
requires = ["poetry-core>=1.4.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.workspace]
members = [
    "services/bot",
    "services/api",
    "services/worker",
    "services/reports",
    "packages/vproxy-common",
    "packages/vproxy-cli"
]
