[tool.poetry]
name = "vproxysuite-bot"
version = "0.1.0"
description = "VProxySuite Bot service (Aiogram v3)"
authors = ["Navid Arianpour <navid.arianpour1987@proton.me>"]
readme = "README.md"
packages = []
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
aiogram = ">=3.3,<4.0"
pydantic = "^2.6.0"
pydantic-settings = "^2.2.1"
httpx = "^0.27.0"

[tool.poetry.group.dev.dependencies]
black = "^24.3.0"
isort = "^5.13.2"
mypy = "^1.9.0"
flake8 = "^7.0.0"
pytest = "^8.1.1"
pytest-asyncio = "^0.23.5"

[build-system]
requires = ["poetry-core>=1.5.0"]
build-backend = "poetry.core.masonry.api"
